--- a/expedia-endpoints/pom.xml
+++ b/expedia-endpoints/pom.xml
@@ -29,6 +29,11 @@
             <artifactId>javax.ws.rs-api</artifactId>
             <version>2.1</version>
         </dependency>
+        <dependency>
+            <groupId>com.fasterxml.jackson.core</groupId>
+            <artifactId>jackson-annotations</artifactId>
+            <version>2.13.0</version>
+        </dependency>
     </dependencies>
 
 </project>
